# eval

./: .gitignore  .mise.toml  README.md  WORKSPACE  mise.toml  pyproject.toml  requirements.in  requirements.txt
ansible/: .mise.toml  README.md
ansible/jinja2/: nested_dict.json  nested_dict.yml
argocd/: setup-argocd.sh
aws/: setup_credentials
awx/: .mise.toml  01-helm-install-operator.sh  02-kubectl-create-secret-cert.sh  02-openssl-generate-key.sh  03-openssl-generate-cert.sh  04-kubectl-create-secret-cert.sh  04-kubectl-get-admin-pass.sh  05-export-controller-env-values.source  05-kubectl-create-ingress.sh  06-kubectl-get-admin-pass.sh  awx-ingress.yml  awx-openssl.conf  awx-operator-values.yml  get-certificate.sh  install.sh  inventory  play-copy-template-10-async.yml  play-copy-template-10.yml  play-copy-template-100-async.yml  play-copy-template-100.yml  play-create-awx-template.yml  play-delete-template-copies-async.yml  play-delete-template-copies.yml  requirements.txt  uninstall.sh  values.yml
bash/: check_dependencies.sh  check_for_sourced_file.sh  colored_messages.sh  get-script-location.sh  move-to-subdirectory-during-script.sh  return_code.sh  run_args_as_exec.sh  traps.sh  variable_default_operator.sh
bash/subshell/: mainshell.sh  subshell.sh
bash/system_configs/: centos.profile.md
bazel/action_run/: BUILD.bazel  source.txt
bazel/docker/: WORKSPACE
bazel/python/: BUILD.bazel  WORKSPACE  WORKSPACE.bazel  greeting.py  hello.py  requirements.txt
bazel/python/src/: main.py
bazel/python_in_docker/src/: BUILD.bazel
bazel/rule_tutorial/: BUILD.bazel  foo.bzl
docker/lighttpd/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/multi-stage/: Dockerfile  create-stages.sh
docker/node/: docker-compose.yml  entrypoint
docker/python/: Dockerfile  (+1 more)
elasticsearch/: .gitignore  docker-compose.yml
expect/: get-output-noninteractive
foundationdb/: cluster.excalidraw  docker-compose.yml  test.py
grafana/: get-credentials.sh  install.sh  uninstall.sh  values.yml
java/: ConsoleProgram.java
json2elastic/: json2elastic.py  multi_usage_of_key.json
kaniko/: Dockerfile  config.json  standart_input_k8s.sh
kind/: config.yaml  create-cluster.sh  recreate-cluster.sh  stop-cluster.sh
kpt/: README.md
kubernetes/: Makefile  create-pod-in-namespace.yml  k8s-delete-cluster.sh  k8s-start-cluster.sh  k8s-stop-cluster.sh  minio.yaml  nginx-in-sandbox-namespace.yml  spawn_cloudbox.yaml  spawn_pod_with_ingress.yaml  spawn_pod_with_lb_service.yaml  spawn_pod_with_sleep_loop.yml  spawn_pod_with_tools.yaml
loki-prom-grafana-stack/: dashboard-loki.yml  get-credentials.sh  install.sh  loki-values.yml  prometheus-values.yml  uninstall.sh
minikube/: README.md
ml_vqgan_clip/: pyproject.toml
notify/: notify.py
panda3d/: main.py
pants/: .gitignore  README.md  mise.toml  pants.toml
pulumi/: Makefile  README.md  requirements.txt
rasa-os/: pyproject.toml
robotframework/: first.robot  log.html  output.xml  report.html
scikit-image/: coins1.py  numpy_crashcourse.py  threshold.py
skaffold/tutorial/: .tool-versions  Makefile  pyproject.toml  skaffold.yaml
skaffold/tutorial/backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  skaffold.yaml
skaffold/tutorial/backend/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
skaffold/tutorial/backend/src/: main.py
skaffold/tutorial/backend/tests/: test_transposer_backend.py
skaffold/tutorial/backend/transposer_backend/: main.py
skaffold/tutorial/frontend/: .dockerignore  Dockerfile  entrypoint.sh  skaffold.yaml
skaffold/tutorial/frontend/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
skaffold/tutorial/frontend/src/: backend-url.env  index.html
skaffold/tutorial/frontend/src/js/: transposer.js
ssl-ca/: 01-create-ca-key.sh  02-create-ca-cert.sh  03-show-ca-cert.sh  04-create-host-csr.sh  05-show-host-csr.sh  06-create-host-crt.sh  07-show-host-crt.sh  ca.conf  host.conf
streamlit/: MyApp.py  README.md  my_data.csv
tensorflow-serving/: docker-compose.yml  model.py  predict.py  readme.txt
vernemq/: install.sh  values.yml
yaml2json/: convert-yaml2json.py  spec.yml
zookeeper/: docker-compose.yml
(+127 files in other folders)
