[tool.poetry]
name = "eval-rasa-os"
version = "0.1.0"
description = ""
authors = ["Thomas Steinert <hello@chroni.cc>"]

[tool.poetry.dependencies]
python = "~3.8"
rasa = "^2.8.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
