
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

rules_python_sha256 = "a3a6e99f497be089f81ec082882e40246bfd435f52f4e82f37e89449b04573f6"
rules_python_version = "0.10.2"

http_archive(
    name = "rules_python",
    sha256 = rules_python_sha256,
    strip_prefix = "rules_python-{version}".format(version = rules_python_version),
    urls = [
        "https://github.com/bazelbuild/rules_python/archive/refs/tags/{version}.tar.gz".format(version = rules_python_version),
    ],
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python",
    python_version = "3.9",
)
