[tool.poetry]
name = "skaffold-tutorial"
version = "0.1.0"
description = "A tutorial showing the power of skaffold."
authors = ["Thomas Steinert <hello@chroni.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = {extras = ["standard"], version = "^0.21.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
