load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@deps//:requirements.bzl", "requirement")

download_pkgs(
  name = "pkg_source",
  image_tar = "@cuda_base//image",
  packages = [
    "python3",
    "python3-dev",
    "python3-opencv",
    "python3-pip",
  ],
)

install_pkgs(
  name = "pkg_image",
  image_tar = "@cuda_base//image",
  installables_tar = ":pkg_source.tar",
  output_image_name = "pkg_image",
)

container_image(
  name = "python_base",
  base = ":pkg_image.tar",
  symlinks = {
    "/usr/bin/python": "/usr/bin/python3.6",
  },
)

py3_image(
  name = "main",
  srcs = ["main.py"],
  base = ":python_base",
  layers = [
      requirement("torch"),
  ],
)
